PHASE-2 done
